--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-mcp>=1.0.0
-starlette>=0.27.0
-sse-starlette>=1.6.0
+# No external dependencies required for basic version
+# All using Python standard library
